# shopify-checker

./: README.md  pyproject.toml  requirements.txt
src/shopify_checker/: shopify_checker.py
